Changed styling on about and card, Fixed overflow issue Added techstack

--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,20 @@
   font-weight: 400;
 }
 
-a {
-  text-decoration: none;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+html {
+  scroll-snap-type: y mandatory;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  background-color: black;
+}
+
+a {
+  text-decoration: none;
 }
